--- a/Home/index.html
+++ b/Home/index.html
@@ -60,7 +60,7 @@
         <section class="relax">
             <p>Relaxe um pouco! ^.^</p>
 
-            <audio preload="metadata" autoplay controls loop>
+            <audio preload="metadata" controls loop>
                 <source src="../Eletrosamba - Quincas Moreira.mp3" type="audio/mpeg">
                 <source src="../Eletrosamba-Quincas-Moreira_1.ogg" type="audio/ogg">
                 <source src="../Eletrosamba-Quincas-Moreira.wav" type="audio/wav">
